--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    container_name: postgres_db
+    container_name: postgres
     image: postgres:latest
     volumes:
       - postgres_data:/var/lib/postgresql/data
@@ -10,10 +10,12 @@ services:
       - POSTGRES_DB=auth_service_db
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USER=postgres
+    networks:
+      - my_shared_network
 
-  app:
+  auth-service:
     build: .
-    container_name: auth_service_app
+    container_name: auth-service
     depends_on:
       - postgres
     ports:
@@ -22,6 +24,12 @@ services:
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/auth_service_db
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: postgres
+    networks:
+      - auth_notification_network
+
+networks:
+  auth_notification_network:
+    external: true
 
 volumes:
   postgres_data:
